# photo-album

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  README.md  makefile
.circleci/: config.yml
src/: lib.rs  main.rs
src/lib/: mod.rs  photo_collection.rs  run.rs
tests/: integration_test.rs
tests/data/: photos.txt  photos_5000.json
