[package]
name = "photo-album"
version = "0.1.0"
authors = ["rcoy-v <rcoy.vance@pm.me>"]
edition = "2018"

[lib]
path = "src/lib/mod.rs"
doctest = false

[features]
mock = []

[[bin]]
name = "photo-album"
path = "src/main.rs"
test = false

[dependencies]
reqwest = { version = "0.10.3", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "0.23.3"